--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -9,26 +9,14 @@
     "# Create a practice set of random latitude and longitude combinations.\n",
     "x = [25.12903645, 25.92017388, 26.62509167, -59.98969384, 37.30571269]\n",
     "y = [-67.59741259, 11.09532135, 74.84233102, -76.89176677, -61.13376282]\n",
-    "coordinates = zip(x, y)\n"
+    "coordinates = zip(x, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25.12903645 -67.59741259\n",
-      "25.92017388 11.09532135\n",
-      "26.62509167 74.84233102\n",
-      "-59.98969384 -76.89176677\n",
-      "37.30571269 -61.13376282\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the tuple () function to display the latitudes and longitude combination.\n",
     "for coordinate in coordinates:\n",
@@ -37,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,15 +35,528 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cockburn town tc\n",
+      "gat ly\n",
+      "parvatsar in\n",
+      "punta arenas cl\n",
+      "saint george bm\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use the tuple function to display the latitude and longitude combinations.\n",
+    "for coordinate in coordinates:\n",
+    "    print(citipy.nearest_city(coordinate[0], coordinate[1]).city_name,\n",
+    "          citipy.nearest_city(coordinate[0], coordinate[1]).country_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use the tuple function to display the latitude and longitude combinations.\n",
-    "for coordinate in coordinates:\n",
-    "for coordinate in coordinates:\n",
-    "    print(citipy.nearest_city(coordinate[0], coordinate[1]).city_name,\n",
-    "          citipy.nearest_city(coordinate[0], coordinate[1]).country_code)"
+    "# import the requests library.\n",
+    "import requests\n",
+    "\n",
+    "# import the Api key.\n",
+    "from config import weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=c45661bf65d270f100a19490c6037b66\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Starting URL for for weather map API call.\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=c45661bf65d270f100a19490c6037b66&q=Boston\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "print(city_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a 'Get' request for weather.\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# directly calling the code \n",
+    "city_weather.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [400]>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an Endpoint URL for a city. - Mistakenly calling wrong city\n",
+    "city_url = url + \"&q\" + \"Bston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Selecting Data Format for data retrieved"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":600,\"main\":\"Snow\",\"description\":\"light snow\",\"icon\":\"13n\"}],\"base\":\"stations\",\"main\":{\"temp\":32.95,\"feels_like\":23.16,\"temp_min\":30.99,\"temp_max\":34,\"pressure\":1017,\"humidity\":86},\"visibility\":10000,\"wind\":{\"speed\":10.36,\"deg\":340},\"clouds\":{\"all\":90},\"dt\":1611807058,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1611748944,\"sunset\":1611784288},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the text of the 'Get' request.\n",
+    "city_weather.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 600,\n",
+       "   'main': 'Snow',\n",
+       "   'description': 'light snow',\n",
+       "   'icon': '13n'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 32.95,\n",
+       "  'feels_like': 23.16,\n",
+       "  'temp_min': 30.99,\n",
+       "  'temp_max': 34,\n",
+       "  'pressure': 1017,\n",
+       "  'humidity': 86},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 10.36, 'deg': 340},\n",
+       " 'clouds': {'all': 90},\n",
+       " 'dt': 1611807058,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 3486,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1611748944,\n",
+       "  'sunset': 1611784288},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the json() text of the 'Get' request.\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Handling Request Errors "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City Weather found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city. --- Printing a response when the weather data is not found\n",
+    "\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City Weather not found.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### if the return code is anything other than 200, JSON data will always be returned. We can determine\n",
+    "### if the response was successful by checking the stsatus_code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City Weather found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking if statement for incorrect input \n",
+    "\n",
+    "city_url = url + \"&q=\" \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City Weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Parse Response from an API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 600,\n",
+       "   'main': 'Snow',\n",
+       "   'description': 'light snow',\n",
+       "   'icon': '13n'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 32.79,\n",
+       "  'feels_like': 24.28,\n",
+       "  'temp_min': 30.99,\n",
+       "  'temp_max': 34,\n",
+       "  'pressure': 1017,\n",
+       "  'humidity': 86},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 8.05, 'deg': 340},\n",
+       " 'clouds': {'all': 90},\n",
+       " 'dt': 1611808059,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 3486,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1611748944,\n",
+       "  'sunset': 1611784288},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Retrieving data from the Json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the json data.\n",
+    "boston_data = city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 1,\n",
+       " 'id': 3486,\n",
+       " 'country': 'US',\n",
+       " 'sunrise': 1611748944,\n",
+       " 'sunset': 1611784288}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the corresponding value for our city \"sys\".\n",
+    "boston_data[\"sys\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'US'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get even more specific\n",
+    "boston_data[\"sys\"][\"country\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.3584 -71.0598 34 86 90 8.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "lat = boston_data[\"coord\"][\"lat\"]\n",
+    "lng = boston_data[\"coord\"][\"lon\"]\n",
+    "max_temp = boston_data[\"main\"][\"temp_max\"]\n",
+    "humidity = boston_data[\"main\"][\"humidity\"]\n",
+    "clouds = boston_data[\"clouds\"][\"all\"]\n",
+    "wind = boston_data[\"wind\"][\"speed\"]\n",
+    "print(lat, lng, max_temp, humidity, clouds, wind)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convert the date Timestamp."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1611808059"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data[\"dt\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Converting universal time \"UTC\" to international organization standard \"ISO\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2021, 1, 28, 4, 27, 39)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the date time module from the dateline libary \n",
+    "from datetime import datetime\n",
+    "\n",
+    "# Get the data from the JSON file.\n",
+    "date = boston_data[\"dt\"]\n",
+    "\n",
+    "# Convert the UTC date to a date time format with year, month, day, hours, minutes and seconds.\n",
+    "datetime.utcfromtimestamp(date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'21-01-28 04:27:39'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# converting the datetime format using strftime().\n",
+    "datetime.utcfromtimestamp(date).strftime('%y-%m-%d %H:%M:%S')"
    ]
   },
   {
