--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,21 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cockburn town tc\n",
-      "gat ly\n",
-      "parvatsar in\n",
-      "punta arenas cl\n",
-      "saint george bm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use the tuple function to display the latitude and longitude combinations.\n",
     "for coordinate in coordinates:\n",
@@ -59,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +107,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +129,7 @@
        "200"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":600,\"main\":\"Snow\",\"description\":\"light snow\",\"icon\":\"13n\"}],\"base\":\"stations\",\"main\":{\"temp\":32.95,\"feels_like\":23.16,\"temp_min\":30.99,\"temp_max\":34,\"pressure\":1017,\"humidity\":86},\"visibility\":10000,\"wind\":{\"speed\":10.36,\"deg\":340},\"clouds\":{\"all\":90},\"dt\":1611807058,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1611748944,\"sunset\":1611784288},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":801,\"main\":\"Clouds\",\"description\":\"few clouds\",\"icon\":\"02d\"}],\"base\":\"stations\",\"main\":{\"temp\":13.05,\"feels_like\":-1.68,\"temp_min\":10.4,\"temp_max\":16,\"pressure\":1024,\"humidity\":56},\"visibility\":10000,\"wind\":{\"speed\":14.97,\"deg\":330,\"gust\":21.85},\"clouds\":{\"all\":20},\"dt\":1612018568,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1612007977,\"sunset\":1612043723},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
      "execution_count": 12,
@@ -234,26 +222,26 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 600,\n",
-       "   'main': 'Snow',\n",
-       "   'description': 'light snow',\n",
-       "   'icon': '13n'}],\n",
+       " 'weather': [{'id': 801,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'few clouds',\n",
+       "   'icon': '02d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 32.95,\n",
-       "  'feels_like': 23.16,\n",
-       "  'temp_min': 30.99,\n",
-       "  'temp_max': 34,\n",
-       "  'pressure': 1017,\n",
-       "  'humidity': 86},\n",
+       " 'main': {'temp': 13.05,\n",
+       "  'feels_like': -1.68,\n",
+       "  'temp_min': 10.4,\n",
+       "  'temp_max': 16,\n",
+       "  'pressure': 1024,\n",
+       "  'humidity': 56},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 10.36, 'deg': 340},\n",
-       " 'clouds': {'all': 90},\n",
-       " 'dt': 1611807058,\n",
+       " 'wind': {'speed': 14.97, 'deg': 330, 'gust': 21.85},\n",
+       " 'clouds': {'all': 20},\n",
+       " 'dt': 1612018568,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 3486,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1611748944,\n",
-       "  'sunset': 1611784288},\n",
+       "  'sunrise': 1612007977,\n",
+       "  'sunset': 1612043723},\n",
        " 'timezone': -18000,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
@@ -314,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -346,40 +334,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 600,\n",
-       "   'main': 'Snow',\n",
-       "   'description': 'light snow',\n",
-       "   'icon': '13n'}],\n",
+       " 'weather': [{'id': 801,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'few clouds',\n",
+       "   'icon': '02d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 32.79,\n",
-       "  'feels_like': 24.28,\n",
-       "  'temp_min': 30.99,\n",
-       "  'temp_max': 34,\n",
-       "  'pressure': 1017,\n",
-       "  'humidity': 86},\n",
+       " 'main': {'temp': 13.05,\n",
+       "  'feels_like': -1.68,\n",
+       "  'temp_min': 10.4,\n",
+       "  'temp_max': 16,\n",
+       "  'pressure': 1024,\n",
+       "  'humidity': 56},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 8.05, 'deg': 340},\n",
-       " 'clouds': {'all': 90},\n",
-       " 'dt': 1611808059,\n",
+       " 'wind': {'speed': 14.97, 'deg': 330, 'gust': 21.85},\n",
+       " 'clouds': {'all': 20},\n",
+       " 'dt': 1612018568,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 3486,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1611748944,\n",
-       "  'sunset': 1611784288},\n",
+       "  'sunrise': 1612007977,\n",
+       "  'sunset': 1612043723},\n",
        " 'timezone': -18000,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -419,11 +407,11 @@
        "{'type': 1,\n",
        " 'id': 3486,\n",
        " 'country': 'US',\n",
-       " 'sunrise': 1611748944,\n",
-       " 'sunset': 1611784288}"
+       " 'sunrise': 1612007977,\n",
+       " 'sunset': 1612043723}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +432,7 @@
        "'US'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,14 +444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.3584 -71.0598 34 86 90 8.05\n"
+      "42.3584 -71.0598 16 56 20 14.97\n"
      ]
     }
    ],
@@ -486,16 +474,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1611808059"
+       "1612018568"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,16 +501,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2021, 1, 28, 4, 27, 39)"
+       "datetime.datetime(2021, 1, 30, 14, 56, 8)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,13 +528,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'21-01-30 14:56:08'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# converting the datetime format using strftime().\n",
+    "datetime.utcfromtimestamp(date).strftime('%y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using the time module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1612018895.013248"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "\n",
+    "# Get todays date in seconds\n",
+    "today = time.time()\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'21-01-28 04:27:39'"
+       "'01/30/21'"
       ]
      },
      "execution_count": 26,
@@ -555,8 +596,9 @@
     }
    ],
    "source": [
-    "# converting the datetime format using strftime().\n",
-    "datetime.utcfromtimestamp(date).strftime('%y-%m-%d %H:%M:%S')"
+    "# formating the date time to get the date for today\n",
+    "today = time.strftime(\"%x\")\n",
+    "today"
    ]
   },
   {
